feat: added classes on functions, high_order functions, exercise 15, events in HTML and the initial class on DOM.

--- a/js/estruturas-de-dados/array_bidimensionais-matrizes/index.html
+++ b/js/estruturas-de-dados/array_bidimensionais-matrizes/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="../style.css" />
     <title>Arrays Bidimensionais (Matrizes)</title>
   </head>
@@ -18,11 +22,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/exercicios/exercicio-12/index.html"
-          >Exercício 12: Pilha de Cartas</a
+          ><i class="fi fi-rr-angle-left"></i> Exercício 12: Pilha de Cartas</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/estruturas-de-dados/objetos/index.html"
-          >Objetos no JavaScript</a
+          >Objetos no JavaScript <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Arrays Bidimensionais (Matrizes)</h1>
