--- a/js/estruturas-de-dados/objetos/index.html
+++ b/js/estruturas-de-dados/objetos/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="../style.css" />
     <title>Objetos no JavaScript</title>
   </head>
@@ -20,11 +24,11 @@
         <a
           class="nav_pages"
           href="/js/estruturas-de-dados/array_bidimensionais-matrizes/index.html"
-          >Arrays Bidimensionais (Matrizes)</a
+          ><i class="fi fi-rr-angle-left"></i> Arrays Bidimensionais (Matrizes)</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/exercicios/exercicio-13/index.html"
-          >Exercício 13: Cadastro de imóveis</a
+          >Exercício 13: Cadastro de imóveis <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Objetos no JavaScript</h1>
