--- a/js/exercicios/exercicio-2/index.html
+++ b/js/exercicios/exercicio-2/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Calculadora de 4 Operações</title>
   </head>
@@ -18,11 +22,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/exercicios/exercicio-1/index.html"
-          >Exercício 1: Cadastro de Recrutas</a
+          ><i class="fi fi-rr-angle-left"></i> Exercício 1: Cadastro de Recrutas</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/comparação_de_dados/index.html"
-          >Comparação de dados</a
+          >Comparação de dados <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Exercício 2: Calculadora de 4 Operações.</h1>
