--- a/js/funcao/index.html
+++ b/js/funcao/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Funções no JavaScript</title>
   </head>
@@ -18,11 +22,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/exercicios/exercicio-13/index.html"
-          >Exercício 13: Cadastro de imóveis</a
+          ><i class="fi fi-rr-angle-left"></i> Exercício 13: Cadastro de imóveis</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/funcao/parametros_em_Funcoes/index.html"
-          >Parâmetros de uma função</a
+          >Parâmetros de uma função <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Funções no JavaScript</h1>
