--- a/js/operadores_e_expressoes/index.html
+++ b/js/operadores_e_expressoes/index.html
@@ -11,16 +11,20 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Operadores e expressões</title>
   </head>
   <body>
     <header>
       <nav>
-        <a class="nav_pages" href="/js/variaveis/index.html">variáveis</a>
+        <a class="nav_pages" href="/js/variaveis/index.html"><i class="fi fi-rr-angle-left"></i> variáveis</a>
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/Usando_js_no_html/index.html"
-          >JavaScript no HTML</a
+          >JavaScript no HTML <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Operadores e expressões</h1>
