--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
 
     <link rel="stylesheet" href="style.css" />
     <title>Estudo de Programação</title>
@@ -368,8 +372,55 @@
                 <a href="/js/escopo/index.html">Aula 20: Escopo.</a>
               </li>
               <li>
-                <a href="/js/">Aula 21: .</a>
+                <a href="/js/funcao/funções_recursivas/index.html"
+                  >Aula 21: Funções recursivas.</a
+                >
               </li>
+              <li>
+                <a href="/js/funcao/funções_anonimas/index.html"
+                  >Aula 22: Funções Anônimas.</a
+                >
+              </li>
+              <li>
+                <a href="/js/high-order_functions/index.html"
+                  >Aula 23: High-Order Functions.</a
+                >
+              </li>
+              <li>
+                <a
+                  href="/js/high-order_functions/high-order_functions_e_Arrays/index.html"
+                  >Aula 24: High-Order Functions e Arrays.</a
+                >
+              </li>
+              <li>
+                <a href="/js/eventos_no_html/index.html"
+                  >Aula 25: Eventos no HTML.</a
+                >
+              </li>
+              <li>
+                <a href="/js/dom/obtendo_elementos_html_do_dom/index.html"
+                  >Aula 26: Obtendo elementos HTML do DOM.</a
+                >
+              </li>
+              <!-- <li>
+                <a href="/js/dom/criando_novos_elementos_no_dom/index.html"
+                  >Aula 27: Criando novos elementos no DOM.</a
+                >
+              </li> -->
+              <!-- <li>
+                <a href="/js/dom/praticando_a_manipulação_do_dom/index.html"
+                  >Aula 28: Praticando a Manipulação do DOM.</a
+                >
+              </li> -->
+              <!-- <li>
+                <a href="/js">Aula 29: .</a>
+              </li> -->
+              <!-- <li>
+                <a href="/js">Aula 30: .</a>
+              </li> -->
+              <!-- <li>
+                <a href="/js">Aula 31: .</a>
+              </li> -->
             </ul>
           </nav>
         </div>
@@ -448,8 +499,27 @@
                 >
               </li>
               <li>
-                <a href="/js/exercicios/exercicio-">Exercício 15: .</a>
+                <a href="/js/exercicios/exercicio-15/index.html"
+                  >Exercício 15: Sistema de vagas de emprego.</a
+                >
               </li>
+              <!-- <li>
+                <a href="/js/exercicios/exercicio-16/index.html"
+                  >Exercício 16: Escalação de Times.</a
+                >
+              </li> -->
+              <!-- <li>
+                <a href="/js/exercicios/exercicio-17/index.html">Exercício 17: .</a>
+              </li> -->
+              <!-- <li>
+                <a href="/js/exercicios/exercicio-18/index.html">Exercício 18: .</a>
+              </li> -->
+              <!-- <li>
+                <a href="/js/exercicios/exercicio-19/index.html">Exercício 19: .</a>
+              </li> -->
+              <!-- <li>
+                <a href="/js/exercicios/exercicio-20/index.html">Exercício 20: .</a>
+              </li> -->
             </ul>
           </nav>
         </div>
