--- a/js/Usando_js_no_html/index.html
+++ b/js/Usando_js_no_html/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Usando JavaScript no HTML</title>
     <script>
@@ -22,11 +26,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/operadores_e_expressoes/index.html"
-          >Operadores e expressões</a
+          ><i class="fi fi-rr-angle-left"></i> Operadores e expressões</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/recursos_nativos/index.html"
-          >Recursos nativos do navegador</a
+          >Recursos nativos do navegador <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Usando JavaScript no HTML</h1>
