--- a/js/condicionais/if_else/index.html
+++ b/js/condicionais/if_else/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Estruturas Condicionais: IF e ELSE</title>
   </head>
@@ -18,11 +22,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/operadores_logicos/index.html"
-          >Operadores Lógicos</a
+          ><i class="fi fi-rr-angle-left"></i> Operadores Lógicos</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/exercicios/exercicio-3/index.html"
-          >Exercício 3: teste de velocidade</a
+          >Exercício 3: teste de velocidade <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Estruturas Condicionais: IF e ELSE</h1>
