--- a/js/escopo/index.html
+++ b/js/escopo/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Escopo em JavaScript</title>
   </head>
@@ -18,11 +22,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/funcao/retorno_da_funcao/index.html"
-          >Retorno de uma Funções</a
+          ><i class="fi fi-rr-angle-left"></i> Retorno de uma Funções</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/exercicios/exercicio-14/index.html"
-          >Exercício 14: Calculadora Geométrica</a
+          >Exercício 14: Calculadora Geométrica <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Escopo em JavaScript</h1>
