--- a/js/estruturas-de-dados/array/index.html
+++ b/js/estruturas-de-dados/array/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="../style.css" />
     <title>Arrays no JavaScript</title>
   </head>
@@ -18,13 +22,13 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/exercicios/exercicio-10/index.html"
-          >Exercício 10: Procurando Palíndromos</a
+          ><i class="fi fi-rr-angle-left"></i> Exercício 10: Procurando Palíndromos</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a
           class="nav_pages"
           href="/js/estruturas-de-dados/trabalhando_com_array/index.html"
-          >Novas Formas de Trabalhar com Arrays</a
+          >Novas Formas de Trabalhar com Arrays <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Arrays no JavaScript</h1>
