--- a/js/estruturas-de-dados/trabalhando_com_array/index.html
+++ b/js/estruturas-de-dados/trabalhando_com_array/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="../style.css" />
     <title>trabalhando com array</title>
   </head>
@@ -18,11 +22,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/estruturas-de-dados/array/index.html"
-          >Arrays no JavaScript</a
+          ><i class="fi fi-rr-angle-left"></i> Arrays no JavaScript</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/exercicios/exercicio-11/index.html"
-          >Exercício 11: Fila de Espera</a
+          >Exercício 11: Fila de Espera <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Novas Formas de Trabalhar com Arrays</h1>
