--- a/js/estruturas_de_repetição/do-while/index.html
+++ b/js/estruturas_de_repetição/do-while/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Estruturas de Repetição: Do While</title>
   </head>
@@ -18,11 +22,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/exercicios/exercicio-6/index.html"
-          >Exercício 6: Visitando novas cidades</a
+          ><i class="fi fi-rr-angle-left"></i> Exercício 6: Visitando novas cidades</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/exercicios/exercicio-7/index.html"
-          >Exercício 7: Menu Interativo</a
+          >Exercício 7: Menu Interativo <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Estruturas de Repetição: Do While</h1>
