--- a/js/exercicios/exercicio-10/index.html
+++ b/js/exercicios/exercicio-10/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Procurando Palíndromos</title>
   </head>
@@ -18,11 +22,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/exercicios/exercicio-9/index.html"
-          >Exercício 9: Robô da Tabuada</a
+          ><i class="fi fi-rr-angle-left"></i> Exercício 9: Robô da Tabuada</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/estruturas-de-dados/array/index.html"
-          >Arrays no JavaScript</a
+          >Arrays no JavaScript <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Exercício 10: Procurando Palíndromos</h1>
