--- a/js/exercicios/exercicio-11/index.html
+++ b/js/exercicios/exercicio-11/index.html
@@ -10,9 +10,9 @@
 </head>
     <header>
         <nav>
-            <a class="nav_pages" href="/js/estruturas-de-dados/trabalhando_com_array/index.html">Novas Formas de Trabalhar com Arrays</a>
+            <a class="nav_pages" href="/js/estruturas-de-dados/trabalhando_com_array/index.html"><i class="fi fi-rr-angle-left"></i> Novas Formas de Trabalhar com Arrays</a>
             <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
-            <a class="nav_pages" href="/js/exercicios/exercicio-12/index.html">Exercício 12: Pilha de Cartas</a>
+            <a class="nav_pages" href="/js/exercicios/exercicio-12/index.html">Exercício 12: Pilha de Cartas <i class="fi fi-rr-angle-right"></i></a>
         </nav>
         <h1>Exercício 11: Fila de Espera</h1>
     </header>
