--- a/js/exercicios/exercicio-12/index.html
+++ b/js/exercicios/exercicio-12/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Pilha de Cartas</title>
   </head>
@@ -18,13 +22,13 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/exercicios/exercicio-11/index.html"
-          >Exercício 11: Fila de Espera</a
+          ><i class="fi fi-rr-angle-left"></i> Exercício 11: Fila de Espera</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a
           class="nav_pages"
           href="/js/estruturas-de-dados/array_bidimensionais-matrizes/index.html"
-          >Arrays Bidimensionais (Matrizes)</a
+          >Arrays Bidimensionais (Matrizes) <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Exercício 12: Pilha de Cartas</h1>
