--- a/js/exercicios/exercicio-14/index.html
+++ b/js/exercicios/exercicio-14/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Exercício 14: Calculadora Geométrica</title>
   </head>
@@ -18,10 +22,12 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/escopo/index.html"
-          >Escopo em JavaScript</a
+          ><i class="fi fi-rr-angle-left"></i> Escopo em JavaScript</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
-        <a class="nav_pages" href="#">Próxima aula</a>
+        <a class="nav_pages" href="/js/funcao/funções_recursivas/index.html"
+          >Funções recursivas <i class="fi fi-rr-angle-right"></i></a
+        >
       </nav>
       <h1>Exercício 14: Calculadora Geométrica</h1>
     </header>
