--- a/js/exercicios/exercicio-3/index.html
+++ b/js/exercicios/exercicio-3/index.html
@@ -12,6 +12,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Teste de Velocidade</title>
   </head>
@@ -19,11 +23,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/condicionais/if_else/index.html"
-          >Estruturas Condicionais: IF e ELSE</a
+          ><i class="fi fi-rr-angle-left"></i> Estruturas Condicionais: IF e ELSE</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/exercicios/exercicio-4/index.html"
-          >Exercício 4: Cálculo de Dano</a
+          >Exercício 4: Cálculo de Dano <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Exercício 3: Teste de velocidade</h1>
