--- a/js/exercicios/exercicio-4/index.html
+++ b/js/exercicios/exercicio-4/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Cálculo de Dano</title>
   </head>
@@ -18,11 +22,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/exercicios/exercicio-3/index.html"
-          >Exercício 3: Teste de velocidade</a
+          ><i class="fi fi-rr-angle-left"></i> Exercício 3: Teste de velocidade</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/condicionais/switch/index.html"
-          >Estruturas Condicionais: Switch</a
+          >Estruturas Condicionais: Switch <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Exercício 4: Cálculo de Dano</h1>
