--- a/js/exercicios/exercicio-5/index.html
+++ b/js/exercicios/exercicio-5/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Conversor de medidas</title>
   </head>
@@ -18,11 +22,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/condicionais/switch/index.html"
-          >Estruturas Condicionais: Switch</a
+          ><i class="fi fi-rr-angle-left"></i> Estruturas Condicionais: Switch</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/estruturas_de_repetição/while/index.html"
-          >Estruturas de Repetição: While</a
+          >Estruturas de Repetição: While <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Exercício 5: Conversor de medidas</h1>
