--- a/js/exercicios/exercicio-6/index.html
+++ b/js/exercicios/exercicio-6/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Visitando novas cidades</title>
   </head>
@@ -18,13 +22,13 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/estruturas_de_repetição/while/index.html"
-          >Estruturas de Repetição: While</a
+          ><i class="fi fi-rr-angle-left"></i> Estruturas de Repetição: While</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a
           class="nav_pages"
           href="/js/estruturas_de_repetição/do-while/index.html"
-          >Estruturas de Repetição: Do While</a
+          >Estruturas de Repetição: Do While <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Exercício 6: Visitando novas cidades</h1>
