--- a/js/exercicios/exercicio-7/index.html
+++ b/js/exercicios/exercicio-7/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Menu Interativo</title>
   </head>
@@ -20,11 +24,11 @@
         <a
           class="nav_pages"
           href="/js/estruturas_de_repetição/do-while/index.html"
-          >Estruturas de Repetição: Do While</a
+          ><i class="fi fi-rr-angle-left"></i> Estruturas de Repetição: Do While</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/exercicios/exercicio-8/index.html"
-          >Exercício 8: Controle Financeiro</a
+          >Exercício 8: Controle Financeiro <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Exercício 7: Menu Interativo</h1>
