--- a/js/exercicios/exercicio-8/index.html
+++ b/js/exercicios/exercicio-8/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Controle Financeiro</title>
   </head>
@@ -18,11 +22,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/exercicios/exercicio-7/index.html"
-          >Exercício 7: Menu interativo</a
+          ><i class="fi fi-rr-angle-left"></i> Exercício 7: Menu interativo</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/estruturas_de_repetição/for/index.html"
-          >Estrutura de repetição: for</a
+          >Estrutura de repetição: for <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Exercício 8: Controle Financeiro</h1>
