--- a/js/funcao/retorno_da_funcao/index.html
+++ b/js/funcao/retorno_da_funcao/index.html
@@ -11,17 +11,21 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
+    <link rel="stylesheet" href="../style.css" />
     <title>Retorno de uma função</title>
   </head>
   <body>
     <header>
       <nav>
         <a class="nav_pages" href="/js/funcao/parametros_em_Funcoes/index.html"
-          >Parâmetros de uma função</a
+          ><i class="fi fi-rr-angle-left"></i> Parâmetros de uma função</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
-        <a class="nav_pages" href="/js/escopo/index.html">Escopo</a>
+        <a class="nav_pages" href="/js/escopo/index.html">Escopo <i class="fi fi-rr-angle-right"></i></a>
       </nav>
       <h1>Retorno de Funções no JavaScript</h1>
     </header>
