--- a/js/operadores_logicos/index.html
+++ b/js/operadores_logicos/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Operadores Lógicos</title>
   </head>
@@ -18,11 +22,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/comparação_de_dados/index.html"
-          >Comparação de dados</a
+          ><i class="fi fi-rr-angle-left"></i> Comparação de dados</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/condicionais/if_else/index.html"
-          >Estruturas Condicionais: IF e ELSE</a
+          >Estruturas Condicionais: IF e ELSE </a
         >
       </nav>
       <h1>Operadores Lógicos</h1>
