--- a/js/recursos_nativos/index.html
+++ b/js/recursos_nativos/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Recursos nativos do navegador</title>
   </head>
@@ -19,11 +23,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/Usando_js_no_html/index.html"
-          >Usando o JavaScript no HTML</a
+          ><i class="fi fi-rr-angle-left"></i> Usando o JavaScript no HTML</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/exercicios/exercicio-1/index.html"
-          >Exercício 1: Cadastro de Recrutas</a
+          >Exercício 1: Cadastro de Recrutas <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>Recursos nativos do navegador</h1>
