--- a/js/tipos_de_dasos/index.html
+++ b/js/tipos_de_dasos/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Tipos de dados</title>
   </head>
@@ -18,7 +22,7 @@
     <header>
       <nav>
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
-        <a class="nav_pages" href="/js/variaveis/index.html">variáveis</a>
+        <a class="nav_pages" href="/js/variaveis/index.html">variáveis <i class="fi fi-rr-angle-right"></i></a>
       </nav>
       <h1>Tipos de dados</h1>
     </header>
