--- a/js/variaveis/index.html
+++ b/js/variaveis/index.html
@@ -11,6 +11,10 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>variáveis</title>
   </head>
@@ -18,11 +22,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/tipos_de_dasos/index.html"
-          >Tipos primitivos</a
+          ><i class="fi fi-rr-angle-left"></i> Tipos primitivos</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/operadores_e_expressoes/index.html"
-          >Operadores e expressões</a
+          >Operadores e expressões <i class="fi fi-rr-angle-right"></i></a
         >
       </nav>
       <h1>variáveis</h1>
