feat: added the lesson on DOM manipulation

--- a/js/dom/criando_novos_elementos_no_dom/index.html
+++ b/js/dom/criando_novos_elementos_no_dom/index.html
@@ -17,7 +17,9 @@
   <body>
     <header>
       <nav>
+        <a class="nav_pages" href="/js/dom/obtendo_elementos_html_do_dom/index.html"><i class="fi fi-rr-angle-left"></i> Obtendo elementos HTML do DOM</a>
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
+        <a class="nav_pages prox" href="/js/dom/praticando_a_manipulação_do_dom/index.html">Manipulação do DOM <i class="fi fi-rr-angle-right"></i></a>
       </nav>
       <h1>Criando Novos Elementos no DOM</h1>
     </header>
