--- a/js/dom/obtendo_elementos_html_do_dom/index.html
+++ b/js/dom/obtendo_elementos_html_do_dom/index.html
@@ -22,8 +22,7 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/eventos_no_html/index.html"
-          ><i class="fi fi-rr-angle-left"></i> Exercicio 15: Sistema de vagas de
-          emprego
+          ><i class="fi fi-rr-angle-left"></i> Eventos no HTML
         </a>
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a
