--- a/js/exercicios/exercicio-15/index.html
+++ b/js/exercicios/exercicio-15/index.html
@@ -21,7 +21,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
-    <title>Sistema de Vagas de Emprego</title>
+    <title>Exercicio 15: Sistema de Vagas de Emprego</title>
   </head>
   <body>
     <header>
@@ -36,7 +36,7 @@
           Eventos no HTML <i class="fi fi-rr-angle-right"></i
         ></a>
       </nav>
-      <h1>Sistema de Vagas de Emprego</h1>
+      <h1>Exercicio 15: Sistema de Vagas de Emprego</h1>
     </header>
 
     <div class="section">
