feat: Exercise 16: Team Lineup has been added

--- a/index.html
+++ b/index.html
@@ -412,9 +412,9 @@
                   >Aula 28: Praticando a Manipulação do DOM.</a
                 >
               </li>
-              <!-- <li>
-                <a href="/js">Aula 29: .</a>
-              </li> -->
+              <li>
+                <a href="/js/dom/enviando_valores_do_dom_para_o_js/index.html">Aula 29: Enviando valores do DOM para o JS.</a>
+              </li>
               <!-- <li>
                 <a href="/js">Aula 30: .</a>
               </li> -->
