feat: added a lesson on how to interact with the DOM and pass values ​​to JavaScript

--- a/index.html
+++ b/index.html
@@ -415,9 +415,9 @@
               <li>
                 <a href="/js/dom/enviando_valores_do_dom_para_o_js/index.html">Aula 29: Enviando valores do DOM para o JS.</a>
               </li>
-              <!-- <li>
-                <a href="/js">Aula 30: .</a>
-              </li> -->
+              <li>
+                <a href="/js/dom/eventos_no_js/index.html">Aula 30: Trabalhando com eventos no Javascript.</a>
+              </li>
               <!-- <li>
                 <a href="/js">Aula 31: .</a>
               </li> -->
