feat: The class on Events in JavaScript has been added

--- a/index.html
+++ b/index.html
@@ -418,8 +418,20 @@
               <li>
                 <a href="/js/dom/eventos_no_js/index.html">Aula 30: Trabalhando com eventos no Javascript.</a>
               </li>
+              <li>
+                <a href="/js/trabalhando_com_formulários/index.html">Aula 31: Trabalhando com formulários no Javascript.</a>
+              </li>
               <!-- <li>
-                <a href="/js">Aula 31: .</a>
+                <a href="/js/">Aula 32: .</a>
+              </li> -->
+              <!-- <li>
+                <a href="/js/">Aula 33: .</a>
+              </li> -->
+              <!-- <li>
+                <a href="/js/">Aula 34: .</a>
+              </li> -->
+              <!-- <li>
+                <a href="/js/">Aula 35: .</a>
               </li> -->
             </ul>
           </nav>
