--- a/js/dom/enviando_valores_do_dom_para_o_js/index.html
+++ b/js/dom/enviando_valores_do_dom_para_o_js/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
     />
-    <title>Interagindo com o DOM</title>
+    <title>Enviando valores do DOM para o Javascript</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -34,7 +34,7 @@
           >Trabalhando com eventos no Javascript <i class="fi fi-rr-angle-right"></i
         ></a>
       </nav>
-      <h1>Interagir com o DOM e passar valores para o JavaScript</h1>
+      <h1>Enviando valores do DOM para o Javascript</h1>
     </header>
 
     <div class="section">
