feat: JavaScript forms lesson has been added

--- a/index.html
+++ b/index.html
@@ -520,9 +520,9 @@
                   >Exercício 16: Escalação de Times.</a
                 >
               </li>
-              <!-- <li>
-                <a href="/js/exercicios/exercicio-17/index.html">Exercício 17: .</a>
-              </li> -->
+              <li>
+                <a href="/js/exercicios/exercicio-17/index.html">Exercício 17: Cadastro de Devs.</a>
+              </li>
               <!-- <li>
                 <a href="/js/exercicios/exercicio-18/index.html">Exercício 18: .</a>
               </li> -->
