feat: Exercise 17 has been added to the developer registration

--- a/index.html
+++ b/index.html
@@ -421,9 +421,9 @@
               <li>
                 <a href="/js/trabalhando_com_formulários/index.html">Aula 31: Trabalhando com formulários no Javascript.</a>
               </li>
-              <!-- <li>
-                <a href="/js/">Aula 32: .</a>
-              </li> -->
+              <li>
+                <a href="/js/manipulando_estilos/index.html">Aula 32: Manipulando Estilos com Javascript.</a>
+              </li>
               <!-- <li>
                 <a href="/js/">Aula 33: .</a>
               </li> -->
@@ -521,7 +521,7 @@
                 >
               </li>
               <li>
-                <a href="/js/exercicios/exercicio-17/index.html">Exercício 17: Cadastro de Devs.</a>
+                <a href="/js/exercicios/exercicio-17/index.html">Exercício 17: Cadastro de desenvolvedores.</a>
               </li>
               <!-- <li>
                 <a href="/js/exercicios/exercicio-18/index.html">Exercício 18: .</a>
