--- a/js/trabalhando_com_formulários/index.html
+++ b/js/trabalhando_com_formulários/index.html
@@ -25,7 +25,7 @@
         <a class="nav_pages" href="/js/dom/eventos_no_js/index.html"><i class="fi fi-rr-angle-left"></i> Eventos no Javascript</a>
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages prox" href="/js/exercicios/exercicio-17/index.html"
-          >Exercício 17: Cadastro de devs <i class="fi fi-rr-angle-right"></i
+          >Exercício 17: Cadastro de desenvolvedores <i class="fi fi-rr-angle-right"></i
         ></a>
       </nav>
       <h1>Trabalhando com Formulários no JavaScript</h1>
