feat: Added a class on manipulating styles with JavaScript

--- a/index.html
+++ b/index.html
@@ -422,11 +422,11 @@
                 <a href="/js/trabalhando_com_formulários/index.html">Aula 31: Trabalhando com formulários no Javascript.</a>
               </li>
               <li>
-                <a href="/js/manipulando_estilos/index.html">Aula 32: Manipulando Estilos com Javascript.</a>
+                <a href="/js/manipulando_estilos/index.html">Aula 32: Manipulando estilos com Javascript.</a>
               </li>
-              <!-- <li>
-                <a href="/js/">Aula 33: .</a>
-              </li> -->
+              <li>
+                <a href="/js/manipulando_atributos/index.html">Aula 33: Manipulando atributos com Javascript.</a>
+              </li>
               <!-- <li>
                 <a href="/js/">Aula 34: .</a>
               </li> -->
