feat: Added a lesson on attribute manipulation with JavaScript

--- a/js/manipulando_estilos/index.html
+++ b/js/manipulando_estilos/index.html
@@ -113,7 +113,7 @@
       </div>
 
       <div class="section">
-        <h2>Resolução do código</h2>
+        <h2>Resolução do código script.js</h2>
         <div class="code">
           <pre><code>
 // Seleciona a primeira div com a classe 'section is-light'
@@ -144,5 +144,19 @@ document.getElementById("switchBtn").addEventListener("click", switchTheme)
         </div>
       </div>
     </main>
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu
+        <a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+        >
+          <strong><ion-icon name="logo-github"></ion-icon> GitHub</strong> </a
+        >.
+      </p>
+    </footer>
   </body>
 </html>
